# almond

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
crates/almond/: Cargo.toml  build.rs
crates/almond-cc/: Cargo.toml  build.rs
crates/almond-cc/src/: clang.rs  lib.rs  main.rs
crates/almond/src/: common.c  common.h  feedbacks.rs  ivshmem.rs  kcov.rs  kmsg.rs  lib.rs  ring.rs  skipped_args.rs  stats_client.rs  stats_monitor.rs  syscall_tree.rs  syz-compat.h  target.rs
crates/almond/src/executors/: mod.rs  subthread.rs
crates/almond/src/input/: list.rs  mod.rs
crates/almond/src/mutations/: calls.rs  crossover.rs  mapping.rs  mod.rs
crates/almond/src/observers/: coverage_ring.rs  kcov_globals.rs  kcov_map.rs  mod.rs  signal_ring.rs
