[package]
name = "almond"
version = "0.1.0"
edition = "2024"
description = "A syscall fuzzer library built on LibAFL."
license = "MIT OR Apache-2.0"
repository = "https://github.com/almond-project/almond"

[features]
default = ["remote", "integration"]
integration = []
remote = []
future = []
track_hit_feedbacks = []

[build-dependencies]
cc = { workspace = true, features = ["parallel"] }

[dependencies]
libafl = { version = "0.15.4" }
libafl_bolts = "0.15.4"
rustix = { version = "1.1.2", features = ["mm"] }
anyhow = "1.0.100"
serde = { workspace = true, features = ["alloc", "rc"] }
log = { workspace = true }
hashbrown = { version = "0.16", features = ["serde"]}
arrayvec = "0.7.6"
crossbeam = "0.8.0"
serde_json = "1.0.145"
libc = "0.2"

[lib]
name = "almond"
crate-type = ["lib"]
